[package]
name = "mtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.38"
roxmltree = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9.7"
